@@ -25,7 +25,7 @@
 		<p>
 		<font color="#5555aa" size="4">Documentation:</font>
 		<ul>
-			<li>XINS User Guide in <a href="docs/index.html">HTML</a> and <a href="docs/XINSGuide">PDF</a>.</li>
+			<li>XINS User Guide in <a href="docs/index.html">HTML</a> and <a href="docs/XINSGuide.pdf">PDF</a>.</li>
 			<li><a href="docs/javadoc/index.html">Javadoc</a> (<a href="docs/javadoc/overview-summary.html">no frames</a>).</li>
 			<li>Logdoc for the <a href="docs/logdoc/client/index.html">client</a>,
 			    <a href="docs/logdoc/common/index.html">common</a> and
