@@ -4,10 +4,15 @@
 package org.xins.tests.server;
 
 import java.io.File;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.Iterator;
+
 import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
-
+import org.xins.client.DataElement;
 
 import org.xins.client.XINSCallRequest;
 import org.xins.client.XINSCallResult;
@@ -92,7 +97,6 @@ public class MetaFunctionsTests extends TestCase {
       TargetDescriptor descriptor = new TargetDescriptor("http://localhost:8080/");
       XINSServiceCaller caller = new XINSServiceCaller(descriptor);
       XINSCallResult result = caller.call(request);
-      System.err.println("Server called");
       assertNull("The function returned a result code.", result.getErrorCode());
       assertNull("The function returned a data element.", result.getDataElement());
       PropertyReader parameters = result.getParameters();
@@ -101,6 +105,49 @@ public class MetaFunctionsTests extends TestCase {
       assertNotNull("No XINS version specified.", parameters.get("xins.version"));
       assertNotNull("No xmlenc version specified.", parameters.get("xmlenc.version"));
       assertEquals("Incorrect number of parameters.", 3, parameters.size());
+   }
+   
+   public void testGetStatistics() throws Throwable {
+      XINSCallRequest request = new XINSCallRequest("_GetStatistics", null);
+      TargetDescriptor descriptor = new TargetDescriptor("http://localhost:8080/");
+      XINSServiceCaller caller = new XINSServiceCaller(descriptor);
+      XINSCallResult result = caller.call(request);
+      assertNull("The function returned a result code.", result.getErrorCode());
+      assertNotNull("The function returned a data element.", result.getDataElement());
+      PropertyReader parameters = result.getParameters();
+      assertNotNull("The function did not returned any parameters.", parameters);
+      assertNotNull("No startup date specified.", parameters.get("startup"));
+      try {
+         SimpleDateFormat formatter = new SimpleDateFormat("yyyy.MM.dd hh:mm:ss.SSS");
+         formatter.parse(parameters.get("startup"));
+      } catch (ParseException parseException) {
+         fail("Incorrect date format for startup time.");
+      }
+      assertNotNull("No (now) date specified.", parameters.get("now"));
+      try {
+         SimpleDateFormat formatter = new SimpleDateFormat("yyyy.MM.dd hh:mm:ss.SSS");
+         Date now = formatter.parse(parameters.get("now"));
+         assertTrue("Start-up time is after 'now' time.", now.after(formatter.parse(parameters.get("startup"))));
+      } catch (ParseException parseException) {
+         fail("Incorrect date format for 'now'.");
+      }
+      DataElement data = result.getDataElement();
+      assertFalse(data.getAttributes().hasNext());
+      Iterator children = data.getChildren();
+      
+      DataElement heap = (DataElement) children.next();
+      assertNotNull("No total memory provided.", heap.get("total"));
+      assertNotNull("No used memory provided.", heap.get("used"));
+      assertNotNull("No free memory provided.", heap.get("free"));
+      assertNotNull("No max memory provided.", heap.get("max"));
+      try {
+         Long.parseLong(heap.get("total"));
+         Long.parseLong(heap.get("used"));
+         Long.parseLong(heap.get("free"));
+         Long.parseLong(heap.get("max"));
+      } catch (Exception exception) {
+         fail("Incorrect value while parsing a memory size.");
+      }
    }
    
    /**
