@@ -3,9 +3,14 @@ CHANGES INTRODUCED IN XINS 0.210:                                (1.0.0-beta3)
 
 * XINS/Java Server Framework:
   - Logging warning if the current XINS version is not a production release.
+  - Added test for the _GetStatistics meta function.
+
+* XINS/Java Client Framework:
+  - Fixed parsing problem of when a result had a data section.
 
 * Build and release process:
   - Fixed incorrect URL in the README.html.
+  - Added the Jetty XML files to start the other demos.
 
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.209:                                (1.0.0-beta2)
